# Wasso-BE

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  SCHEDULER_SETUP.md  docker-compose.yml  manage.py  pyproject.toml  qr_code.py
api/club/: apps.py  club_url_names.py  urls.py
api/event/: admin.py  urls.py
api/generation/: apps.py
api/notion/: apps.py  urls.py  views.py
api/userapp/: admin.py  apps.py  authentication.py  backends.py  enums.py  models.py  permissions.py  urls.py
club/: admin.py  models.py  serializers.py  urls.py  views.py
club/admin/: __init__.py  club.py  club_apply.py  generation.py  generation_mapping.py  role.py  user_club.py  user_generation.py
club/migrations/: 0001_initial.py  0002_initial.py  0003_alter_member_last_user_generation.py  0003_alter_userclub_generation_alter_userclub_join_date.py  0003_club_current_generation.py  0003_clubapply_accepted_at_alter_clubapply_generation.py  0003_remove_club_image_url_club_image.py  0003_remove_member_last_user_generation_and_more.py  0003_remove_usergeneration_introduction_and_more.py  0004_alter_club_image.py  0004_club_default_role.py  0004_remove_userclub_last_generation_and_more.py  0005_alter_userclub_last_user_generation.py
club/models/: __init__.py  club.py  club_apply.py  enums.py  generation.py  generation_mapping.py  member.py  role.py  user_club.py  user_generation.py
club/serializers/: __init__.py  club_apply_serializers.py  club_serializers.py  generation_serializers.py  member_serializers.py  role_serializers.py
club/services/: __init__.py  apply_service.py  club_service.py
club/tests/: test_club.py  test_club_exist.py  test_club_service.py  test_member_view.py  test_serializers.py  tests_club.py
club/views/: __init__.py  club_apply_view.py  club_views.py  generation_view.py  member_view.py
common/: exceptions.py
common/component/: __init__.py  deeplinks.py  fcm_component.py  notification_template.py  user_selector.py
common/responses/: simple_response.py
common/serializers/: id_serializers.py
common/test_utils/: entity_creator.py  image_utils.py
common/utils/: excel.py  (+5 more)
config/: __init__.py  asgi.py  celery.py  custom_jwt_authentication.py  exception_handler.py  json_renderer.py  settings.py  urls.py  wsgi.py
dev/: docker-compose.yaml
event/: models.py  serializers.py  urls.py
main/: custom_cache.py  exception_handler.py  exceptions.py  json_renderer.py  settings.py  urls.py
scheduler/: scheduler_main.py  tasks.py
scripts/: refresh_tasks.sh  runserver.sh  start_celery_beat.sh  start_celery_worker.sh
userapp/: admin.py  authentication.py  models.py  permissions.py  urls.py  views.py
utils/: qr_code.py
(+215 files in other folders)
