[tool.poetry]
name = "wasso"
version = "0.1.0"
description = ""
authors = ["devch1013 <devch1013@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
djangorestframework = "^3.15.2"
pre-commit = "^4.0.1"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.1"
djangorestframework-simplejwt = "^5.3.1"
ruff = "^0.8.4"
pytest-django = "^4.9.0"
pytest-cov = "^6.0.0"
django-redis = "^5.4.0"
loguru = "^0.7.3"
django-debug-toolbar = "^4.4.6"
django-extensions = "^3.2.3"
pillow = "^11.1.0"
boto3 = "^1.35.92"
django-storages = "^1.14.4"
qrcode = "^8.0"
firebase-admin = "^6.6.0"
python-jose = "^3.3.0"
cryptography = "^44.0.0"
gunicorn = "^23.0.0"
openpyxl = "^3.1.5"
aiohttp = "^3.11.13"
drf-yasg = "^1.21.7"
django-cors-headers = "^4.7.0"
celery = "^5.3.4"
django-celery-beat = "^2.6.0"
redis = "^5.0.1"
pytest = "^8.4.1"
pytest-mock = "^3.14.1"


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.django.dev"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--reuse-db --nomigrations"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
